# lizz-lang

./: .gitignore  CMakeLists.txt  README.md
inc/: lexer.hpp  token.hpp
src/: lexer.cpp  main.cpp  token.cpp
